--- a/_config.yml
+++ b/_config.yml
@@ -25,13 +25,15 @@ description: >- # this means to ignore newlines until "baseurl:"
   computation, software, and data analysis.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: 
+github_username: paul-morenkov 
 
 # Build settings
-theme: minima
+# theme: minima
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
