--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username: paul-morenkov 
+logo: /assets/img/pfp.jpeg
 
 # Build settings
 # theme: minima
